# js3d

./: CMakeLists.txt  win-configure.bat
assets/: scene.blend  scene.blend1  scene.dae  scene.gltf
assets/shaders/: basic_frag.glsl  basic_vtx.glsl  default_depth.vs.glsl  default_pbr.fs.glsl  drawvert_layout.inc.glsl  vertex.inc.glsl
demo/: demo.cpp  render_worker.cpp  render_worker.h
js3d/: GLState.h  draw_surf.h  draw_vert.h  draw_vert_comp.h  filesystem.cpp  filesystem.h  gltf_loader.cpp  gltf_loader.h  heap.cpp  heap.h  js3d.h  logger.cpp  logger.h  macros.h  material.h  math_converters.h  math_interp.h  math_matrix.h  math_plane.h  math_vector.h  mesh.cpp  mesh.h  mesh3d.h  node.cpp  node.h  render_common.h  render_mesh.cpp  render_mesh.h  render_view.h  texture_manager.cpp  texture_manager.h  thread.cpp  thread.h  tri_surf.h  vertex_cache.cpp  vertex_cache.h
js3d/renderer/opengl/: buffer.h  buffer_gl.cpp  display_manager.h  gl_buffer.cpp  gl_display_manager.cpp  gl_shader_manager.cpp  gl_texture.cpp  render_system.h  render_system_gl.cpp  shader_manager.h  shader_manager_gl.cpp  texture.h
